[package]
name = "spell_proc_macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mylib"
path = "src/lib.rs"
proc_macro = true

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
syn = {version = "1.0", features=["full", "parsing", "printing"]}
quote = "1.0"
proc-macro2 = "1.0"
